tests/baselines/reference/es6ImportNamedImportIdentifiersParsing.errors.txt
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(1,10): error TS2300: Duplicate identifier 'yield'.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(1,23): error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(2,10): error TS1003: Identifier expected.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(2,10): error TS2300: Duplicate identifier 'default'.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(2,25): error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(3,19): error TS1003: Identifier expected.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(3,19): error TS2300: Duplicate identifier 'default'.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(3,34): error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(4,21): error TS2300: Duplicate identifier 'yield'.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(4,34): error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(5,21): error TS1003: Identifier expected.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(5,21): error TS2300: Duplicate identifier 'default'.
tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts(5,36): error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/es6ImportNamedImportIdentifiersParsing.ts (13 errors) ====
    import { yield } from "somemodule"; // Allowed
             ~~~~~
!!! error TS2300: Duplicate identifier 'yield'.
                          ~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import { default } from "somemodule"; // Error - as this is keyword that is not allowed as identifier
             ~~~~~~~
!!! error TS1003: Identifier expected.
             ~~~~~~~
!!! error TS2300: Duplicate identifier 'default'.
                            ~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import { yield as default } from "somemodule"; // error to use default as binding name
                      ~~~~~~~
!!! error TS1003: Identifier expected.
                      ~~~~~~~
!!! error TS2300: Duplicate identifier 'default'.
                                     ~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import { default as yield } from "somemodule"; // no error 
                        ~~~~~
!!! error TS2300: Duplicate identifier 'yield'.
                                     ~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    import { default as default } from "somemodule"; // default as is ok, error of default binding name
                        ~~~~~~~
!!! error TS1003: Identifier expected.
                        ~~~~~~~
!!! error TS2300: Duplicate identifier 'default'.
                                       ~~~~~~~~~~~~
!!! error TS2792: Cannot find module 'somemodule'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?